# lifetime

./: .gitignore  BUILDING.md  Cargo.toml  package-lock.json
core/: Cargo.toml
core/src/: activity.rs  aggregate.rs  lib.rs  lww.rs  model.rs  storage.rs  sync.rs  theme.rs
crypto/: Cargo.toml
crypto/examples/: recovery_demo.rs
crypto/src/: lib.rs  master_key.rs  recovery.rs  vault.rs
crypto/tests/: round_trip.rs
desktop/: components.json  package-lock.json  package.json
desktop/docs/: design-system.md  ui-audit.md
desktop/src/: ActivityDetail.tsx  App.css  App.tsx  AppSidebar.tsx  Appearance.tsx  EnableEncryption.tsx  LogActivity.tsx  Settings.tsx  Summary.tsx  SyncSettings.tsx  Timeline.tsx  UnlockModal.tsx  api.ts  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
desktop/src/components/: day-nav-header.tsx  device-scope-toggle.tsx  section-label.tsx
desktop/src/components/ui/: calendar.tsx  card.tsx  checkbox.tsx  command.tsx  dialog.tsx  select.tsx  sidebar.tsx  slider.tsx  tabs.tsx  tooltip.tsx
desktop/src/lib/: datetime.ts
desktop/src/theme/: ColorInput.tsx  FontPicker.tsx  ProfileSection.tsx  ThemeProvider.tsx  colors.ts  googleFonts.json  googleFonts.ts  tokens.ts
net/: Cargo.toml
net/src/: lib.rs
server/: Cargo.toml
tracker/: Cargo.toml
tracker/examples/: sample_once.rs
tracker/src/: lib.rs  macos.rs  sampler.rs
