[package]
name = "lifetime-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "lifetime_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "uuid", "time"] }
thiserror = "2"

[dev-dependencies]
time = { version = "0.3", features = ["macros"] }
tempfile = "3"
