[package]
name = "lifetime-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "lifetime_crypto"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
crc32fast = "1"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
