[package]
name = "lifetime-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "lifetime_net"

[dependencies]
lifetime-core = { workspace = true }
snow = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v7", "serde"] }

[dev-dependencies]
time = { version = "0.3", features = ["macros"] }
