[package]
name = "lifetime-tracker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "lifetime_tracker"

[dependencies]
lifetime-core = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString"] }
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }
